# ad_buy_engine

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOC_MAP.md  Dockerfile  Makefile  PROJECT_ARCHITECTURE.md  README  README.MD  README.md  SECURITY.md  ad_buy_engine_local  docker-compose.yml  fake_affiliate_network_local  fake_landing_page_server_local  regexes.yaml
campaign_server/: Cargo.toml
campaign_server/src/: campaign_agent.rs  helper_functions.rs  main.rs  private_routes.rs  public_routes.rs  server.rs
campaign_server/src/api/: account.rs  auth.rs  campaign_state.rs  crud.rs  invitation.rs  mod.rs  sync_elements.rs  update_app_state.rs  user.rs
campaign_server/src/db/: account.rs  account_depricated.rs  invitation.rs  mod.rs  user.rs  user_depricated.rs
campaign_server/src/db/crud/: campaign.rs  funnel.rs  landing_page.rs  offer.rs  offer_source.rs  traffic_source.rs
campaign_server/src/dns/: dns_cname.rs
campaign_server/src/email_service/: mailgun_user_init.rs  mod.rs
campaign_server/src/handlers/: account.rs  auth.rs  campaign_state.rs  crud.rs  invitation.rs  mod.rs  user.rs
campaign_server/src/macros/: apis.rs  database.rs  mod.rs
campaign_server/src/management/: email.rs
campaign_server/src/management/api/: debug.rs  email.rs  mod.rs
campaign_server/src/management/db/: debug.rs  email.rs  mod.rs
campaign_server/src/model/: account.rs  invitation.rs  mod.rs  user.rs
campaign_server/src/model/crud/: campaign.rs  funnel.rs  landing_page.rs  mod.rs  offer.rs  offer_source.rs  traffic_source.rs
campaign_server/src/utils/: authentication.rs  cache.rs  config.rs  database.rs  errors.rs  extractors.rs  helpers.rs  state.rs  validate.rs
campaign_server/src/utils/middleware/: auth.rs  mod.rs
feats/admin_dashboard/: Cargo.toml  index.html
feats/admin_dashboard/src/: app.rs  client.rs  lib.rs  main.rs  route.rs
feats/admin_dashboard/src/state/: create_form.rs  entity_form.rs  mod.rs  report.rs
feats/admin_dashboard/src/ui/: create_modal.rs  dashboard_page.rs  mod.rs  navigation_bar.rs  report_table.rs  report_toolbar.rs  settings_page.rs  shell.rs  top_bar.rs  update_settings_page.rs
feats/admin_dashboard/tests/: route_state.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  macros.rs
frontend/src/agents/: fetch_agent.rs  mod.rs  tick_tock.rs
frontend/src/agents/fetch_agent/: clone.rs  reactivate.rs  update.rs
frontend/src/appstate/: app_state_columns.rs  column.rs  crud_app_state.rs  mod.rs  puch_db_info.rs  sync_app_state.rs
frontend/src/components/: main_component.rs  page_utilities.rs
frontend/src/components/account_tab_bar/: custom_conversions.rs  mod.rs  refererr_handling.rs
frontend/src/components/account_tab_section/: mod.rs
frontend/src/components/app_bar/: mod.rs
frontend/src/components/data_table/: data_table_body.rs  data_table_header.rs  mod.rs
frontend/src/components/page_controller/: browser.rs  campaigns.rs  connection.rs  conversions.rs  dashboard.rs  date.rs  day_parting.rs  device.rs  funnels.rs  landers.rs  mod.rs  offer_sources.rs  offers.rs  os.rs  traffic_sources.rs
frontend/src/components/page_utilities/: create_element_button.rs  date_range.rs  filter_options.rs  mod.rs  row_limit.rs  search.rs  second_column_grouping.rs  third_column_grouping.rs  update_element.rs
frontend/src/components/primitives/: button.rs  check_box.rs  text_area.rs  text_input.rs
frontend/src/utils/: puchdb.rs  routes.rs
frontend/src/utils/javascript/: js-scripts.js  js_bindings.rs  mod.rs
frontend/src/utils/routes/: route_helpers.rs
infra/fake_affiliate_network/: Cargo.toml
infra/fake_affiliate_network/src/: cli.rs  config.rs  conversions.rs  lib.rs  macros.rs  main.rs  postback.rs  render.rs  routes.rs  state.rs
infra/fake_affiliate_network/tests/: ad_buy_engine_flow.rs  catalog_config.rs  click_reporting.rs  conversion_generation.rs  operator_controls.rs  postback_delivery.rs
infra/fake_landing_page_server/: Cargo.toml
infra/fake_landing_page_server/src/: cli.rs  config.rs  lib.rs  main.rs  render.rs  routes.rs  safety.rs
infra/fake_landing_page_server/tests/: ad_buy_engine_flow.rs  catalog_config.rs  landing_pages.rs  page_actions.rs
infra/fake_traffic_generator/: Cargo.toml
infra/fake_traffic_generator/src/: cli.rs  config.rs  conversions.rs  lib.rs  main.rs  metrics.rs  output.rs  profiles.rs  redirects.rs  safety.rs  scheduler.rs  session.rs
infra/fake_traffic_generator/tests/: config_safety.rs  profiles_scheduler_output.rs  redirects_and_conversions.rs
legacy/tertiary_frontend/: Cargo.toml
legacy/tertiary_frontend/src/: prelude.rs  routes.rs
legacy/tertiary_frontend/src/component/: check_your_email.rs  footer.rs  invitation.rs  register.rs
runtime/campaign_server/: Cargo.toml
runtime/campaign_server/migrations/: 0001_init.sql
runtime/campaign_server/src/: config.rs  error.rs  lib.rs  main.rs  time.rs
runtime/campaign_server/src/services/: authentication.rs  click_processor.rs  conditions.rs  geoip.rs  geolite_download.rs  mod.rs  updates.rs  user_agent.rs
runtime/campaign_server/src/storage/: conversions.rs  dashboard.rs  database.rs  date_filter.rs  demo.rs  entities.rs  mod.rs  reports.rs  settings.rs  visit_identity.rs  visits.rs
runtime/campaign_server/src/web/: auth.rs  clicks.rs  conversions.rs  crud.rs  dashboard.rs  date_filter.rs  health.rs  mod.rs  reports.rs  router.rs  settings.rs  updates.rs
runtime/campaign_server/tests/: fake_affiliate_demo_seed.rs  fake_landing_page_demo_seed.rs  storage_and_clicks.rs  update_api.rs  update_control.rs
runtime/click_server/: Cargo.toml
runtime/click_server/migrations/: 202606270001_initial.sql
runtime/click_server/src/: app_state.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  security.rs
runtime/click_server/src/http/: auth_handlers.rs  campaign_handlers.rs  mod.rs  request_context.rs  router.rs  setup_handlers.rs  stats_handlers.rs  status_handlers.rs  (+1 more)
runtime/update_agent/: Cargo.toml
runtime/update_agent/src/: main.rs
runtime/update_agent/tests/: update_agent_flow.rs
(+392 files in other folders)
