[package]
name = "ad_buy_engine"
version = "0.2.0"
authors = ["johnwaltonvi <johnwalton@protonmail.com>"]
edition = "2018"

[features]
backend = ["diesel"]
use-ua-parser = ["user-agent-parser"]

[dependencies]
anyhow = "1.0.32"
ipnet = {version="2.3.0",features=["serde"]}

diesel = { version = "1.4.5", optional = true }

uuid = { version = "0.7.0", features = [ "v4", "serde", "wasm-bindgen"] }
either =  {version="1.6.0", features=["serde"]}
strum = "0.20.0"
strum_macros = "0.20.1"
#regex = "1.4.3"
random_name_generator = "0.1.0"
weighted-rs = "0.1.2"
#isolanguage-1 = { version = "0.2.1", features = ["serde"] }
linked_hash_set = {version="0.1.4",features=["serde"]}
chrono = {version="0.4.15",features=["serde", "wasm-bindgen"]}
chrono-tz = "0.5.3"
educe = "0.4.13"
boyer-moore-magiclen = "0.2.10"
serde_json = "1.0.57"

rust_decimal = {version="1.10.2",features=["serde","serde_json"]}
user-agent-parser = { version="0.2.7",optional=true}
serde = { version = "1.0.116", features = ["derive", "rc","alloc"] }

serde_derive = "1.0.116"
maxminddb = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.11"
rand = { version = "0.7", features = ["wasm-bindgen"] }

url =  {version="2.1.1", features=["serde"]}

rayon = "1.4.0"
parking_lot = { version = "0.11.1", features = ["nightly"] }

[workspace]
members=[
    "campaign_server",
    "frontend",
    "tertiary_frontend"
]