[workspace]
members = ["feats/admin_dashboard"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
publish = false

[workspace.dependencies]
yew = { version = "0.23.0", features = ["csr"] }
yew-router = "0.20.0"
wasm-bindgen = "0.2"
web-sys = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
panic = "deny"
unwrap_used = "deny"
