[package]
name = "campaign_server"
version = "0.1.0"
authors = ["johnwaltonvi <johnwalton@protonmail.com>"]
edition = "2018"

[dependencies]
ad_buy_engine = { version = "0.2.0", path = "../", feature=["backend"] }
actix = "0.10.0"
actix-cors = "0.3.0"
actix-files = "0.3.0"
actix-identity = "0.3.0"
actix-redis = "0.9.1"
actix-ratelimit = "0.3.1"
backoff = "0.3.0"
actix-utils = "2.0.0"
actix-service = "1.0.6"
actix-web = {version="3.0.2",features = ["openssl"]}
actix-web-middleware-redirect-scheme = "3.0.0"
openssl = "0.10.32"
argon2rs = "0.2.5"
chrono = { version = "0.4.15", features = ["serde"] }
derive_more = "0.99.10"
diesel = { version = "1.4.5", features = ["chrono", "postgres", "sqlite", "r2d2", "uuidv07"] }
#diesel = { version = "1.4.5", features = ["chrono", "mysql", "postgres", "sqlite", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
envy = "0.4.1"
env_logger = "0.7.1"
futures = "0.3.5"
time = "0.2.19"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.11"
rayon = "1.4.0"
redis-async = "0.6.3"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
uuid = { version = "0.7.0", features = [ "v4", "serde", "wasm-bindgen"] }
validator = "0.11.0"
validator_derive = "0.11.0"
strum = "0.19.2"
strum_macros = "0.19.2"
mailgun-rs = {version="0.1.3",optional=false}

[dev-dependencies]
#actix-http-test = "2.0.0"

[features]
cockroach = []
mysql = []
postgres = []
sqlite = []
default = ["postgres"]