[package]
name = "frontend"
version = "0.2.0"
authors = ["John W. <johnwalton@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-services = { path = "../yew-services" }
#yew-services = { path = "../../yew/packages/yew-services" }
ad_buy_engine = { version = "0.2.0", path = "../" }
yew-components = "0.2.0"
web_logger = "0.2.0"
wasm-logger = "0.2.0"
pouch = "0.0.7-alpha"
dotenv_codegen = "0.15.0"
serde_derive = "1.0.116"
serde = { version = "1.0.116", features = ["derive", "rc","alloc"] }
wee_alloc = "0.4.5"
rust_decimal = {version="1.10.2",features=["serde","serde_json"]}

serde_json = "1.0.57"
url =  {version="2.1.1", features=["serde"]}
wasm-bindgen = "^0.2"
yew = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-router = { git = "https://github.com/yewstack/yew/", branch = "master" }
yew-material = { git = "https://github.com/hamza1311/yew-material", branch = "master", features = ["full"] }

uuid = { version = "0.7.0", features = [ "v4", "serde", "wasm-bindgen"] }
fancy-regex = "0.5.0"
chrono = {version="0.4.15",features=["serde", "wasm-bindgen", "wasmbind"]}
chrono-tz = "0.5.3"

strum = "0.20.0"
strum_macros = "0.20.1"
mailchecker = "3.3.3"
yewtil = "0.3.2"
anyhow = "1.0.32"


either = {version="1.6.1",features=["serde"]}
educe = "0.4.13"
lexical-core = "0.7.4"
boyer-moore-magiclen = "0.2.10"
half = {version="1.6.0",features=["serde"]}
thiserror = "1.0.23"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.45"
features = [
    "Document",
    "Element",
    "Node",
    "Window",
    "HtmlCollection",
    "MouseEvent",
    "HtmlElement",
]


[lib]
crate-type = ["cdylib", "rlib"]
name="secure"
path= "src/lib.rs"