[package]
name = "admin_dashboard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ad_buy_engine_domain.workspace = true
gloo-net.workspace = true
gloo-timers.workspace = true
js-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen-futures.workspace = true
yew.workspace = true
yew-router.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Storage",
    "Window",
] }

[lints]
workspace = true
