[package]
name = "fake_affiliate_network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "abe-fake-affiliate-network"
path = "src/main.rs"

[dependencies]
ad_buy_engine_domain.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
urlencoding.workspace = true

[dev-dependencies]
campaign_server = { path = "../../runtime/campaign_server" }
sqlx.workspace = true
tempfile = "3.20.0"
tower = { version = "0.5.2", features = ["util"] }
uuid.workspace = true

[lints]
workspace = true
