[package]
name = "campaign_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ad_buy_engine_domain.workspace = true
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
maxminddb.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true
user-agent-parser.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
tempfile = "3.20.0"

[lints]
workspace = true
